fixed extra margin

--- a/css/layout.css
+++ b/css/layout.css
@@ -24,7 +24,8 @@
 
 /* Posititoning Classes */
 
-.shadow {
+
+#wood .shadow {
   margin-bottom: 10px;
 }
 
